--- a/amd64.yml
+++ b/amd64.yml
@@ -11,16 +11,19 @@ services:
     restart: always
 
     environment:
-      - API_CONFIG=${API_CONFIG}
-      - API_DBTYPE=postgres
-      - API_DBHOST=db
-      - API_DBPORT=5432
-      - API_DBUSERNAME=${DB_USERNAME}
-      - API_DBPASSWORD=${DB_PASSWORD}
-      - API_DBNAME=${DB_DBNAME}
+      - API_APP_CONFIG=${API_CONFIG}
+      - API_DB_TYPE=postgres
+      - API_DB_HOST=db
+      - API_DB_PORT=5432
+      - API_DB_USERNAME=${DB_USERNAME}
+      - API_DB_PASSWORD=${DB_PASSWORD}
+      - API_DB_NAME=${DB_DBNAME}
 
     networks: 
       - api-db
+
+    depends_on:
+      - db
 
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/healthz"]
