Testing the DAL v2

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ API_CONFIG='dev' # dev/prod
 ## DB CONFIG ##
 DB_USERNAME='Celtra'
 DB_PASSWORD='C3ltr4Ch4ll3ng3'
-DB_DBNAME='UserData'
+DB_DBNAME='InstagramUsersDatabase'
 DB_OUT_PORT=6000
 
 ## NGINX CONFIG ##
