--- a/.github/workflows/raw-api-test.yml
+++ b/.github/workflows/raw-api-test.yml
@@ -1,7 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: API Tests v1
+name: Raw API Test
 
 on:
   push:
@@ -22,9 +19,9 @@ jobs:
         go-version: '1.21.7'
 
     - name: Test config module
-      run: cd ./api/config && go test
+      run: cd ./api/config && go mod init github.com/Timotej979/Celtra-challenge/api/config && go test
 
     - name: Test DAL module
-      run: cd ./api/dal && go test
+      run: cd ./api/dal && go mod init github.com/Timotej979/Celtra-challenge/api/dal && go test
 
       
