--- a/.github/workflows/api-build-test-amd64.yml
+++ b/.github/workflows/api-build-test-amd64.yml
@@ -1,9 +1,10 @@
-name: API build test
+name: API build test (AMD64)
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
@@ -11,21 +12,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.21.7
+      - name: Set up Docker
+        uses: docker/setup-docker@v2
 
-      - name: Build and run API Docker-Compose
-        run: ./run-amd64.sh
-
-      - name: Wait for API to start
-        run: sleep 5
-
-      - name: Test API endpoint
-        run: curl http://localhost:8080/mock-api/v1/mock/healthz
-
-      - name: Stop API container
-        run: docker-compose -f docker-compose-amd64.yml down
+      - name: Build and run Docker Compose services and check API health status
+        run: |
+          chmod +x test-amd64.sh
+          ./test-amd64.sh
