--- a/.github/workflows/api-build-test-arm.yml
+++ b/.github/workflows/api-build-test-arm.yml
@@ -1,4 +1,4 @@
-name: API build test
+name: API build test (ARM)
 
 on:
   push:
@@ -9,24 +9,19 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        runner:
+          - arm
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.21.7
+      - name: Set up Docker
+        uses: docker/setup-docker@v2
 
-      - name: Build and run API Docker-Compose
-        run: ./run-arm.sh
-
-      - name: Wait for API to start
-        run: sleep 5
-
-      - name: Test API endpoint
-        run: curl http://localhost:8080/mock-api/v1/mock/healthz
-
-      - name: Stop API container
-        run: docker-compose -f docker-compose-arm.yml down
+      - name: Build and run Docker Compose services and check API health status
+        run: |
+          chmod +x test-amd64.sh
+          ./test-amd64.sh
