--- a/.github/workflows/raw-api-test.yml
+++ b/.github/workflows/raw-api-test.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -24,11 +23,14 @@ jobs:
            go get github.com/spf13/cobra &&
            go get github.com/spf13/viper &&
            go get github.com/spf13/pflag &&
+           go get github.com/stretchr/testify/assert &&
+           go get github.com/stretchr/testify/require &&
            go test
 
     - name: Test DAL module
       run: cd ./api/dal &&
            go mod init github.com/Timotej979/Celtra-challenge/api/dal &&
+           go get github.com/rs/zerolog &&
            go test
 
       
