--- a/.github/workflows/api-build-test-amd64.yml
+++ b/.github/workflows/api-build-test-amd64.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-docker@v2
+        uses: actions/setup-docker@v2
 
       - name: Build and run Docker Compose services and check API health status
         run: |
