Modify workflows to make them work v2

--- a/.github/workflows/raw-api-test.yml
+++ b/.github/workflows/raw-api-test.yml
@@ -35,7 +35,7 @@ jobs:
            go get go.mongodb.org/mongo-driver/mongo/options &&
            go get gorm.io/driver/mysql &&
            go get gorm.io/gorm &&
-           go get gorm.io/driver/postgres
+           go get gorm.io/driver/postgres &&
            go test
 
       
