Add missing go dependencies to test workflow

--- a/.github/workflows/raw-api-test.yml
+++ b/.github/workflows/raw-api-test.yml
@@ -40,6 +40,8 @@ jobs:
            go get github.com/stretchr/testify/assert &&
            go get github.com/testcontainers/testcontainers-go &&
            go get github.com/testcontainers/testcontainers-go/wait &&
+           go get go.mongodb.org/mongo-driver/internal/aws/credentials@v1.14.0 &&
+           go get go.mongodb.org/mongo-driver/x/mongo/driver/ocsp@v1.14.0 &&
            go test
 
       
