Code review fixes for multi-build Dockerfiles v1

--- a/.env
+++ b/.env
@@ -1,11 +1,16 @@
 ## API CONFIG ##
-API_CONFIG='dev' # dev/prod
+API_ARCH='amd64'
+API_ALPINE_VERSION='3.19'
+
+API_CONFIG='dev'
+API_DB_TYPE='postgres'
+
+API_DB_USERNAME='Celtra'
+API_DB_PASSWORD='C3ltr4Ch4ll3ng3'
+API_DB_DBNAME='CarsDB'
 
 ## DB CONFIG ##
-DB_USERNAME='Celtra'
-DB_PASSWORD='C3ltr4Ch4ll3ng3'
-DB_DBNAME='InstagramUsersDatabase'
-DB_OUT_PORT=6000
+DB_OUT_PORT=6666
 
 ## NGINX CONFIG ##
 NGINX_OUT_PORT=8080
