--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,27 +1,25 @@
+# Build arguments
+ARG API_ALPINE_VERSION=3.19.1
+ARG API_ARCH=amd64
+
 # STEP 1 build executable binary
 FROM golang:alpine AS builder
 
-RUN adduser -D -g '' appuser
-RUN mkdir /app
+RUN adduser -D -g '' appuser && \
+    mkdir /app
 
 WORKDIR /app
-
-# copy go mod and sum files
-COPY go.mod go.sum ./
-
-RUN go mod download
 
 # copy the source code
 COPY . .
 
 # build the binary
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm go build -a -installsuffix cgo -ldflags="-w -s" -o /go/bin/app .
-
-RUN chmod 0555 /go/bin/app
+RUN go mod download && \
+    CGO_ENABLED=0 GOOS=linux GOARCH=${API_ARCH} go build -a -installsuffix cgo -ldflags="-w -s" -o /go/bin/app . && \
+    chmod 0555 /go/bin/app
 
 # STEP 2 build a small image
-# start from scratch
-FROM scratch
+FROM alpine:${API_ALPINE_VERSION}
 
 WORKDIR /app
 
