Fix some Dockerfiles to be more versatile

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,10 +1,9 @@
-FROM nginx:1.23
+ARG NGINX_VERSION=stable-alpine3.17-slim
+
+FROM nginx:${NGINX_VERSION}
 
 # Replace with our own nginx.conf
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Import static files
 COPY api_errors/ /api_errors
-
-# Nginx debug mode
-CMD ["nginx", "-g", "daemon off;"]
