--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
     ports:
       - ${DB_OUT_PORT}:5432
     # Uncomment the following lines if you want to persist data
-    volumes:
-      - ./db/data:/var/lib/postgresql/data/
+    #volumes:
+    #  - ./db/data:/var/lib/postgresql/data/
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${API_DB_USERNAME} -d ${API_DB_DBNAME}"]
       interval: 10s
@@ -60,6 +60,9 @@ services:
     image: "mock-nginx:amd64"
     build:
       context: ./nginx
+      dockerfile: Dockerfile
+      args:
+        - NGINX_VERSION
     restart: always
     ports:
       - ${NGINX_OUT_PORT}:8000
